# QATools

./: CMakeLists.txt  qaTools.LinkDef.h  qa_HADES_2gev.cfg  qa_STAR_3gev.cfg  qa_enscan2.cfg
batch/: dcm_xecs_3.02gev_afterburner.list  localcheck_start.sh  start.sh  start_qatools.sh  test.list  test_out.root
format/: qaEvent.cxx  qaEvent.h  qaParticle.cxx  qaParticle.h  qaParticleLight.cxx  qaParticleLight.h
readers/: qaReader_epos4_root.cxx  qaReader_epos4_root.h  qaReader_hsd_root.cxx  qaReader_hsd_root.h  qaReader_manager.cxx  qaReader_manager.h  qaReader_mcini.cxx  qaReader_mcini.h  qaReader_mcpico.cxx  qaReader_mcpico.h  qaReader_phqmd.cxx  qaReader_phqmd.h  qaReader_smash_root.cxx  qaReader_smash_root.h
utility/: Utility.cxx  Utility.h
